--- a/styles/login.css
+++ b/styles/login.css
@@ -13,7 +13,7 @@ body {
   background: #F3F3F3;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, button {
   color: #333333;
   font-family: 'Ubuntu', sans-serif;
 }
@@ -51,9 +51,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  margin-bottom: 100px;
 }
 
 .row {
@@ -65,12 +64,16 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   margin-bottom: 30px;
   font-size: 38px;
-  color: #e5434e;
+  color: #C62828;
 }
 
 .col-md-5 h3 {
   font-weight: medium;
   font-size: 52px;
+}
+
+.col-md-5 span {
+  color: #C62828;
 }
 
 .col-md-5 h4 {
@@ -81,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .login {
   background: #fff;
-  padding: 60px 60px;
+  padding: 37px 60px;
   
   border-radius: 8px;
   border: 1px solid #C2C2C2;
