--- a/styles/register-3.css
+++ b/styles/register-3.css
@@ -13,7 +13,7 @@ body {
   background: #F3F3F3;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, button {
   color: #333333;
   font-family: 'Ubuntu', sans-serif;
 }
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .btn-primary {
-    width: 76px !important;
+    width: 50% !important;
     height: 76px !important;
     border-radius: 32px !important;
   }
@@ -90,24 +90,21 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 37px;
 }
 
-form .form-group label {
-  color: #555555;
-  margin: 0;
-  font-weight: 700;
+.login h1 {
+  text-align: center;
+  margin-top: 10px;
 }
 
-form .form-group input, select {
-  background: #F3F3F3;
-  border: none !important;
+.login .check-img {
+  display: flex;
+  width: 100%;
+
+  margin: 54px 0;
+  text-align: center;
 }
 
-form .form-group select {
-    background: #f3f3f3 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px !important;
-}
-
-form .form-group input:focus, select:focus {
-  background: #C2C2C2;
-  border: none;
+.check-img img {
+  width:  82px;
 }
 
 .button-wapper {
@@ -119,7 +116,7 @@ form .form-group input:focus, select:focus {
 }
 
 .btn-primary {
-  width: 50px;
+  width: 50%;
   height: 50px;
   text-align: center;
   background: #C62828;
