--- a/styles/register-3.css
+++ b/styles/register-3.css
@@ -32,7 +32,8 @@ h1, h2, h3, h4, h5, h6, button {
   }
 
   .login {
-    padding: 30px 15px !important;
+    padding: 32px !important;
+    margin: 0 32px;
     border-radius: 4px !important;
   }
 
