Update auth pages design

--- a/styles/register.css
+++ b/styles/register.css
@@ -42,11 +42,12 @@ h1, h2, h3, h4, h5, h6 {
     height: 76px !important;
     border-radius: 32px !important;
   }
-}
+  
+  @media (max-width: 1024px) {
+    .bg-img-cloud {
+      width: 0px !important;
+    }
 
-@media (max-width: 1300px) {
-  .container .bg-img {
-    width: 0px !important;
   }
 }
 
@@ -55,6 +56,14 @@ h1, h2, h3, h4, h5, h6 {
   width: 450px;
   left: 0;
   top: 29px;
+}
+
+.bg-img-cloud {
+  position: absolute;
+  z-index: -1;
+  /* width: 100%; */
+  right: 0;
+  bottom: 0;
 }
 
 .container {
