--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,13 @@ h1, h2, h3, h4, h5, h6, span {
   }
 }
 
+@media (max-width: 1350px) {
+  .mb-3 {
+    max-width: 100% !important;
+    
+  }
+}
+
 .col-md-12 {
   padding: 0;
   text-align: center;
@@ -94,3 +101,46 @@ h1, h2, h3, h4, h5, h6, span {
 /* .card .mb-3 {
   margin: 58px !important;
 } */
+
+.col-md-4 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-body {
+  text-align: left;
+}
+
+.card-body p.card-provider  {
+  max-width: 90%;
+  font-size: 18px;
+  font-weight: 700;
+  color: #333333;
+  margin-left: 10px;
+
+  align-items: center;
+} 
+
+.card-body .card-title {
+  max-width: 90%;
+  font-size: 24px;
+  color: #C62828;
+} 
+
+.card-body .card-text {
+  max-width: 90%;
+  font-size: 20px;
+  color: #555555;
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  display: -webkit-box;
+  -webkit-line-clamp: 3; 
+  -webkit-box-orient: vertical; 
+}
+
+.card-body .card-text small {
+  max-width: 90%;
+  font-size: 16px;
+  color: #333333;
+}
