--- a/styles/index.css
+++ b/styles/index.css
@@ -82,6 +82,33 @@ h1, h2, h3, h4, h5, h6, span {
 
 .mb-3 {
   margin-top: 48px;
+  cursor: pointer;
+}
+
+.click {
+  display: flex;
+  position: absolute;
+  z-index: 1;
+
+  width: 12%;
+  height: 100%;
+
+  justify-content: center;
+
+  top: 0px;
+  right: 0px;
+
+  border-radius: 0 2px 2px 0;
+  box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.2);
+  text-align: end;
+  background: #C62828;
+
+  opacity: 0;
+
+  transition: opacity 0.4s;
+}
+.card.mb-3:hover .click {
+  opacity: 1;
 }
 
 .separator {
@@ -104,10 +131,6 @@ h1, h2, h3, h4, h5, h6, span {
 
   opacity: .5;
   border-radius: 5px;
-}
-
-.mb-3 {
-  cursor: pointer;
 }
 
 .grid {
