--- a/styles/index.css
+++ b/styles/index.css
@@ -91,6 +91,12 @@ h1, h2, h3, h4, h5, h6, span {
 .mb-3 {
   margin-top: 48px;
   cursor: pointer;
+  transition: box-shadow 0.3s;
+}
+
+.mb-3:hover {
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+
 }
 
 .click {
@@ -222,4 +228,23 @@ h1, h2, h3, h4, h5, h6, span {
 
 .btn-primary:hover {
   background: #9e2020;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 150px;
+  
+  margin-top: 50px;
+  background: #C62828;
+  
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 4px 4px 0 0;
+}
+
+footer p {
+  color: #fff;
 }
