--- a/styles/loginEscolha.css
+++ b/styles/loginEscolha.css
@@ -3,7 +3,7 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
-
+  
   align-items: center;
   justify-content: center;
 }
@@ -22,15 +22,15 @@ h1, h2, h3, h4, h5, h6, button {
   .title {
     text-align: center;
   }
-
+  
   .title h3 {
     font-size: 46px !important;
   }
-
+  
   .title h4 {
     font-size: 36px !important;
   }
-
+  
   .login {
     padding: 32px !important;
     margin: 0 32px;
@@ -38,22 +38,22 @@ h1, h2, h3, h4, h5, h6, button {
   }
 }
 
-  @media (max-width: 1600px) {
+@media (max-width: 1600px) {
   .container .bg-img {
     width: 0px !important;
   }
-
+  
   @media (max-width: 1024px) {
     .bg-img-cloud {
       width: 0px !important;
     }
-
+    
   }
 }
 
 .title h3 span {
-color: #C62828;
-
+  color: #C62828;
+  
 }
 .bg-img {
   position: absolute;
@@ -99,7 +99,7 @@ color: #C62828;
 .login {
   background: #fff;
   padding: 37px 10px;
- 
+  
   
   border-radius: 8px;
   border: 1px solid #C2C2C2;
@@ -116,19 +116,20 @@ color: #C62828;
   display: flex;
   flex-direction: row;
   margin: 60px 0;
-
+  
 }
 .retangulo {
-display: flex; 
-flex-direction: column;
-width: 140px;
-height: 160px;
-background-color: #F3F3F3;
-text-align: center;
-margin: 0 25px ;
-border-radius: 8px;
-justify-content: center;
-transition: background 0.3s;
+  display: flex; 
+  flex-direction: column;
+  width: 140px;
+  height: 160px;
+  background-color: #F3F3F3;
+  text-align: center;
+  margin: 0 25px ;
+  border-radius: 8px;
+  justify-content: center;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
 .retangulo:hover {
@@ -147,9 +148,9 @@ transition: background 0.3s;
 
 
 .retangulo h2 {
-font-size: 18px;
-color: #555555;
-font-weight: medium;
+  font-size: 18px;
+  color: #555555;
+  font-weight: medium;
 }
 
 .button-wapper {
@@ -157,7 +158,7 @@ font-weight: medium;
   width: 100%;
   margin-top: 20px;
   justify-content: center;
-
+  
 }
 
 .btn-primary {
@@ -168,7 +169,7 @@ font-weight: medium;
   border: none;
   font-weight: 700;
   border-radius: 20px;
-
+  
   transition: 0.3s;
 }
 
