--- a/styles/article-no-auth.css
+++ b/styles/article-no-auth.css
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6, span {
 }
 
 .modal-auth {
+  display: flex;
   position: absolute;
   z-index: 1;
   width: 100%;
@@ -79,11 +80,103 @@ h1, h2, h3, h4, h5, h6, span {
 }
 
 .modal-bodyy {
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-
+  display: flex;
   margin: auto;
+}
+
+.login {
+  align-items: center;
+  min-width: 20vw;
+  /* align-items: center; */
+  background: #fff;
+  padding: 37px 60px;
+  /* margin: auto; */
+  border-radius: 8px;
+  border: 1px solid #C2C2C2;
+  /* right: 0; */
+}
+
+.login h1 {
+  /* text-align: center; */
+  /* font-weight: medium; */
+  color: #333333;
+  margin: 0 0 20px 0;
+
+}
+
+form .form-group label {
+  color: #555555;
+  margin: 0;
+  font-weight: 700;
+  right: 0;
+}
+
+form .form-check .form-check-label {
+  color: #C62828;
+}
+
+form .form-group input {
+  background: #F3F3F3;
+  border: none;
+}
+
+form .form-group input:focus {
+  background: #C2C2C2;
+  border: none;
+}
+
+form .form-check input {
+  background: #F3F3F3;
+}
+
+.btn-primary {
+  width: 100%;
+  height: 50px;
+  background: #C62828;
+  border: none;
+  font-weight: 700;
+
+  transition: 0.3s;
+}
+
+.btn-primary:hover {
+  background-color: #C62828;
+  opacity: 0.3;
+  border: none;
+}
+
+hr {
+  background: #C2C2C2;
+}
+
+.register-section {
+  display: flex;
+  text-align: center;
+  font-weight: medium;
+  font-size: 15px;
+}
+
+.login .register-section h5, h6 {
+  font-weight: medium;
+  font-size: 15px;
+}
+
+.login h5 {
+  color: #333333;
+}
+
+.login .register-section a {
+  text-decoration: none;
+}
+
+.login .register-section h6 {
+  color: #C62828;
+
+  transition: 0.3s;
+}
+
+.login .register-section h6:hover, h6::selection {
+  color: #8b1919;
 }
 
 .navbar-light {
